@@ -23,8 +23,8 @@ package com.rreganjr.nlp.dictionary;
 
 import java.io.Serializable;
 
-import javax.persistence.Column;
-import javax.persistence.Embeddable;
+import jakarta.persistence.Column;
+import jakarta.persistence.Embeddable;
 
 /**
  * @author ron
@@ -113,7 +113,7 @@ public class SemlinkrefId implements Comparable<SemlinkrefId>, Serializable {
 			result = prime * result + getSynset1id().hashCode();
 			result = prime * result + getSynset2id().hashCode();
 			result = prime * result + getLinkid().hashCode();
-			tmpHashCode = new Integer(result);
+			tmpHashCode = Integer.valueOf(result);
 		}
 		return tmpHashCode.intValue();
 	}
